--- v1.5 (2019-xx-xx) ---
* Update packages:
  - openssl: update to version 1.0.2q

--- v1.4 (2018-08-31) ---
* Add new package: x264.
* Add `make all` target: build all available packages.
* Add `make download` target: download sources without build of packages.
* Make `make clean` and `make distclean` targets interactive: user should
  explicitly confirm massive file deletion.
* Delete extra variables CLEAN_SRC_DIR and CLEAN_BUILD_DIR from settings file.
* Improve GetSources() function: show error message if size of downloaded
  tarball is equal to zero. (Only checksum mismatch was shown earlier.)
* Update packages:
  - openssl: update to version 1.0.2p
  - ffmpeg: update to version 4.0.2

--- v1.3 (2018-03-03) ---
* Fix typo in code for install-sdk target: install to ANDROID_SDK_ROOT instead
  of ANDROID_NDK_ROOT.

--- v1.2 (2018-03-02) ---
* Add ANDROID_SDK_ROOT variable into settings.
* Add special packages android-ndk and android-sdk for downloading and unpacking
  of Android NDK and Android SDK.
* Add install-ndk and install-sdk targets (see README or `make help`) for
  copying of unpacked Android NDK and Android SDK to target location.
* Improve UnpackSources(): more intelligent applying of patches.
* Improve CheckPkgUrl().
* Update packages:
  - openssl: fix PKG_URL_2
  - ffmpeg: update to version 3.4.2
  - sdl2: update to version 2.0.8, delete patch (accepted by upstream)

--- v1.1 (2018-01-24) ---
* Improve static build of openssl package.
* Improve notifications during build of packages.
* Simplify usage of *.patch files: apply them directly from UnpackSources()
  function instead of forcing of usage of additional scripts (see *-patches.sh).
* Simplify GetSources() function: do not check the size of tarballs because
  the checkup of checksum should be enough.

--- v1.0 (2018-01-10) ---
* First public release.
