@@ -1,6 +1,8 @@
 --- v1.5 (2019-xx-xx) ---
 * Update packages:
   - openssl: update to version 1.0.2q
+  - sdl2: update to version 2.0.9, switch to build using clang by default,
+    because build using gcc for Android is not supported by upstream anymore
 
 --- v1.4 (2018-08-31) ---
 * Add new package: x264.
